<resources>
    <string name="app_name">ShoutOut</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_userName">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_password">Re-type Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Create_account_link">No account yet? Create one</string>
    <string name="First_name">Your first name</string>
    <string name="Signup_email">Your email</string>
    <string name="location">Location</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="already_have_an_account_sign_in">ALready have an account? sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_event">Create new event</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No lacation data provided</string>
    <string name="permission_denied_explanation">Cannot access ressources</string>
    <string name="settings">go to settings</string>
</resources>
